# gltut-rust

./: Cargo.toml
examples/01-hello-triangle/: main.rs
examples/02-playing-with-colors/: main.rs
examples/02-playing-with-colors/shaders/: multi-input.vert  y-gradient.frag
examples/03_1-moving-triangle-cpu/: main.rs
examples/03_1-moving-triangle-cpu/shaders/: flat-color.frag
examples/03_2-moving-triangle-gpu/: main.rs
examples/03_2-moving-triangle-gpu/shaders/: cycle-color.frag  translate.vert
gl_41/: Cargo.toml  README.md  build.rs
gl_41/src/: lib.rs
src/: app.rs  glutil.rs  lib.rs  main.rs  runtime.rs
src/glutil/: shader.rs  types.rs
src/shaders/: triangle_example.frag
